privacy-policy.html

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -26,6 +26,6 @@
   <p>We implement security measures to protect your data from unauthorized access.</p>
 
   <h2>Contact Us</h2>
-  <p>If you have any questions, please contact us at: <a href="mailto:ma7744746@gmail.com">youremail@example.com</a></p>
+  <p>If you have any questions, please contact us at: <a href="mailto:ma7744746@gmail.com">ma7744746@gmail.com</a></p>
 </body>
 </html>
