data-rights.html

--- a/data-rights.html
+++ b/data-rights.html
@@ -19,6 +19,6 @@
   </ul>
 
   <h2>How to Exercise Your Rights</h2>
-  <p>To exercise any of these rights, please contact us at: <a href="mailto:ma7744746@gmail.com">youremail@example.com</a></p>
+  <p>To exercise any of these rights, please contact us at: <a href="mailto:ma7744746@gmail.com">ma7744746@gmail.com</a></p>
 </body>
 </html>
