privacy-policy.html

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -27,5 +27,21 @@
 
   <h2>Contact Us</h2>
   <p>If you have any questions, please contact us at: <a href="mailto:ma7744746@gmail.com">ma7744746@gmail.com</a></p>
+  <hr>
+<h2>Copyright Information</h2>
+<p>© 2025 Muhammad Ahmad. All rights reserved.</p>
+<p>All content, including code, images, and assets in the <strong>Bicycle Racing Stunt Game</strong>, is the intellectual property of Muhammad Ahmad. Unauthorized copying, distribution, or modification is prohibited without prior written consent.</p>
+
+<h3>Third-Party Assets</h3>
+<ul>
+  <li>Background music: Licensed from [Your Music Source] under a royalty-free license.</li>
+  <li>Icons: From Flaticon.com under Free License with attribution.</li>
+  <li>Other assets: Used under their respective licenses.</li>
+</ul>
+
+<h3>Proof of Copyright</h3>
+<p>I, Muhammad Ahmad, am the sole creator and copyright owner of the Bicycle Racing Stunt Game and all its original content.  
+Any third-party assets used are licensed appropriately.</p>
+<p>Signed,<br>Muhammad Ahmad<br>Date: 15 August 2025</p>
 </body>
 </html>
