privacy-policy.html

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -34,7 +34,7 @@
 
 <h3>Third-Party Assets</h3>
 <ul>
-  <li>Background music: Licensed from [Your Music Source] under a royalty-free license.</li>
+  <li>Background music: from under a royalty-free license.</li>
   <li>Icons: From Flaticon.com under Free License with attribution.</li>
   <li>Other assets: Used under their respective licenses.</li>
 </ul>
